# timewarrior

./: .cirrus.yml  .editorconfig  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  DCO  INSTALL  LICENSE  NEWS  README-Template.md  README.md  TI-103-1.sh  TI-103-2.sh  TI-103-3.sh  TI-103-4.sh  TI-103-5.sh  TI-11.sh  TI-155.sh  TI-159-double-quoted-2.sh  TI-159-double-quoted.sh  TI-159-single-quoted-2.sh  TI-159-single-quoted.sh  TI-170.sh  TI-189.sh  TI-57.sh  TI-62.sh  TI-XX.sh  cmake.h.in  docker-compose.yml  pullupbranches  timew.cbp
.github/: dependabot.yml
.github/workflows/: docker-image.yaml  docker-images.yaml  tests.yaml
cmake/: CXXSniffer.cmake  FindAsciidoctor.cmake
completion/: README.md  timew-completion.bash  timew.fish
doc/: CMakeLists.txt  api.txt  data.txt  dom.txt  examples.txt  grammar.txt  intro.txt  notes.txt  project.txt  report.day.1.txt  report.day.2.txt  report.exc.week.txt  report.month.1.txt  report.summary.txt  report.week.1.txt  report.week.2.txt  report.week.3.txt  report.week.txt  reports.txt  rfc_command_definition.md  rules.txt
doc/holidays/: .editorconfig  CMakeLists.txt  README  holidays.en-US  holidays.en-US.rc  refresh
doc/man/: timew-annotate.1.in  timew-cancel.1.in  timew-chart.1.in  timew-config.1.in  timew-config.7.in  timew-continue.1.in  timew-dates.7.in  timew-day.1.in  timew-delete.1.in  timew-diagnostics.1.in  timew-dom.7.in  timew-duration.7.in  timew-durations.7.in  timew-export.1.in  timew-extensions.1.in  timew-fill.1.in  timew-gaps.1.in  timew-get.1.in  timew-help.1.in  timew-hints.7.in  timew-intervals.7.in  timew-join.1.in  timew-lengthen.1.in  timew-modify.1.in  timew-month.1.in  timew-move.1.in  timew-ranges.7.in  timew-report.1.in  timew-resize.1.in  timew-shorten.1.in  timew-show.1.in  timew-split.1.in  timew-start.1.in  timew-stop.1.in  timew-summary.1.in  timew-tag.1.in  timew-tags.1.in  timew-track.1.in  timew-undo.1.in  timew-untag.1.in  (+3 more)
doc/man1/: .gitignore  CMakeLists.txt  timew-annotate.1.adoc  timew-cancel.1.adoc  timew-chart.1.adoc  timew-config.1.adoc  timew-config.7.in  timew-continue.1.adoc  timew-continue.1.in  timew-dates.7.in  timew-day.1  timew-delete.1.adoc  timew-diagnostics.1.adoc  timew-diagnostics.1.in  timew-export.1.adoc  timew-export.1.in  timew-extensions.1.adoc  timew-extensions.1.in  timew-fill.1.adoc  timew-gaps.1.adoc  timew-gaps.1.in  timew-get.1.adoc  timew-get.1.in  timew-help.1.adoc  timew-help.1.in  timew-join.1.adoc  timew-lengthen.1.adoc  timew-modify.1.adoc  timew-modify.1.in  timew-move.1.adoc  timew-move.1.in  timew-report.1.adoc  timew-report.1.in  timew-resize.1.adoc  timew-resize.1.in  timew-retag.1.adoc  timew-shorten.1.adoc  timew-shorten.1.in  timew-show.1.adoc  timew-split.1.adoc  (+14 more)
doc/man7/: CMakeLists.txt  timew-config.7.adoc  timew-dates.7.adoc  timew-dates.7.in  timew-dom.7.adoc  timew-durations.7.adoc  timew-hints.7.adoc  timew-hints.7.in  timew-ranges.7.adoc  timew-ranges.7.in
doc/themes/: CMakeLists.txt  README  dark.theme  dark_blue.theme  dark_green.theme  dark_red.theme
docker/: timew.dockerfile
ext/: CMakeLists.txt  README  README.md  csv.py  debug.py  on-add.timewarrior  on-modify.timewarrior  summary.py  test-hooks.sh  totals.py
src/: .gitignore  AtomicFile.cpp  AtomicFile.h  CLI.cpp  CLI.h  CMakeLists.txt  Chart.cpp  Chart.h  ChartConfig.h  Classifier.cpp  Classifier.h  Composite.cpp  Composite.h  Database.cpp  Database.h  Datafile.cpp  Datafile.h  Daterange.cpp  Daterange.h  DatetimeParser.cpp  DatetimeParser.h  Exclusion.cpp  Exclusion.h  Extensions.cpp  Extensions.h  ExtensionsTable.cpp  ExtensionsTable.h  Filter.cpp  Filter.h  GapsTable.cpp  GapsTable.h  Grammar.cpp  Grammar.h  GranularDatetime.cpp  GranularDatetime.h  Interval.cpp  Interval.h  IntervalFactory.cpp  IntervalFactory.h  IntervalFilter.cpp  (+71 more)
src/commands/: .gitignore  CMakeLists.txt  CmdAnnotate.cpp  CmdCancel.cpp  CmdChart.cpp  CmdClear.cpp  CmdConfig.cpp  CmdContinue.cpp  CmdDefault.cpp  CmdDefine.cpp  CmdDelete.cpp  CmdDiagnostics.cpp  CmdExport.cpp  CmdExtension.cpp  CmdExtensions.cpp  CmdFill.cpp  CmdGaps.cpp  CmdGet.cpp  CmdHelp.cpp  CmdImport.cpp  CmdJoin.cpp  CmdLengthen.cpp  CmdLog.cpp  CmdModify.cpp  CmdMove.cpp  CmdReport.cpp  CmdReportDay.cpp  CmdReportMonth.cpp  CmdReportSummary.cpp  CmdReportWeek.cpp  CmdResize.cpp  CmdRetag.cpp  CmdShorten.cpp  CmdShow.cpp  CmdSplit.cpp  CmdStart.cpp  CmdStop.cpp  CmdSummary.cpp  CmdTag.cpp  CmdTags.cpp  (+5 more)
src/common/: .gitignore  CMakeLists.txt  Color.cpp  Color.h  FS.cpp  FS.h  README  RX.cpp  Table.cpp  Table.h  Timer.cpp  text.cpp  text.h  unicode.cpp  unicode.h  utf8.cpp
test/: .editorconfig  .gitignore  AtomicFile.t  AtomicFileTest.cpp  CMakeLists.txt  Database.t.cpp  Datafile.t.cpp  DatetimeParser.t.cpp  IntervalSynthesizer.t  RulesProviderMock.h  TagInfoDatabase.t  TagInfoDatabase.t.cpp  TempDir.h  annotate.t  atomic.cpp  atomic.t  bash_tap.sh  bash_tap_ti.sh  cancel.t  chart.t  classifier.t.cpp  cli.t  clock.t  color.t.cpp  composite.t.cpp  config.t  continue.t  data.t.cpp  daterange.t.cpp  delete.t  dom.t  exclusion.t.cpp  export.t  extensions.t  fill.t  fs.t.cpp  gaps.t  get_all_exclusions.t  grammar.t.cpp  granulardatetime.t.cpp  (+55 more)
test/basetest/: __init__.py  exceptions.py  meta.py  testing.py  timew.py  utils.py
test/docker/: alpine-edge  alpine-latest  arch180101  archlinux  centos7  centos8  debianstable  debiantesting  fedora28  fedora29  fedora31  fedora32  fedora33  fedora36  fedora37  fedora38  gentoo  opensuse1500  opensuseleap  opensusetumbleweed  ubuntu1604  ubuntu1804  ubuntu2004  ubuntu2204
test/scripts/: test_osx.sh
test/simpletap/: __init__.py
test/test_extensions/: debug.py  ext_echo
