cmake_minimum_required (VERSION 2.8)

message ("-- Configuring documentation")

add_subdirectory (holidays)
add_subdirectory (themes)

configure_file (man/timew.1.in man/timew.1)
configure_file (man/timew-annotate.1.in man/timew-annotate.1)
configure_file (man/timew-cancel.1.in man/timew-cancel.1)
configure_file (man/timew-chart.1.in man/timew-chart.1)
configure_file (man/timew-config.1.in man/timew-config.1)
configure_file (man/timew-continue.1.in man/timew-continue.1)
configure_file (man/timew-day.1.in man/timew-day.1)
configure_file (man/timew-delete.1.in man/timew-delete.1)
configure_file (man/timew-diagnostics.1.in man/timew-diagnostics.1)
configure_file (man/timew-export.1.in man/timew-export.1)
configure_file (man/timew-extensions.1.in man/timew-extensions.1)
configure_file (man/timew-fill.1.in man/timew-fill.1)
configure_file (man/timew-gaps.1.in man/timew-gaps.1)
configure_file (man/timew-get.1.in man/timew-get.1)
configure_file (man/timew-help.1.in man/timew-help.1)
configure_file (man/timew-join.1.in man/timew-join.1)
configure_file (man/timew-lengthen.1.in man/timew-lengthen.1)
configure_file (man/timew-modify.1.in man/timew-modify.1)
configure_file (man/timew-month.1.in man/timew-month.1)
configure_file (man/timew-move.1.in man/timew-move.1)
configure_file (man/timew-report.1.in man/timew-report.1)
configure_file (man/timew-resize.1.in man/timew-resize.1)
configure_file (man/timew-shorten.1.in man/timew-shorten.1)
configure_file (man/timew-show.1.in man/timew-show.1)
configure_file (man/timew-split.1.in man/timew-split.1)
configure_file (man/timew-start.1.in man/timew-start.1)
configure_file (man/timew-stop.1.in man/timew-stop.1)
configure_file (man/timew-summary.1.in man/timew-summary.1)
configure_file (man/timew-tag.1.in man/timew-tag.1)
configure_file (man/timew-tags.1.in man/timew-tags.1)
configure_file (man/timew-track.1.in man/timew-track.1)
configure_file (man/timew-undo.1.in man/timew-undo.1)
configure_file (man/timew-untag.1.in man/timew-untag.1)
configure_file (man/timew-week.1.in man/timew-week.1)

configure_file (man/timew-config.7.in man/timew-config.7)
configure_file (man/timew-dates.7.in man/timew-dates.7)
configure_file (man/timew-dom.7.in man/timew-dom.7)
configure_file (man/timew-durations.7.in man/timew-durations.7)
configure_file (man/timew-hints.7.in man/timew-hints.7)
configure_file (man/timew-ranges.7.in man/timew-ranges.7)

install (DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/man/ DESTINATION ${TIMEW_MAN1DIR} FILES_MATCHING PATTERN "*.1")
install (DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/man/ DESTINATION ${TIMEW_MAN7DIR} FILES_MATCHING PATTERN "*.7")
